--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -51,6 +51,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>SERVER_APP_URL</key>
+	<string>${SERVER_APP_URL}</string>
+	<key>TARGET</key>
+	<string>${TARGET}</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Reader-Bold.otf</string>
@@ -58,6 +62,8 @@
 		<string>Shiseido-ExtraBoldx.otf</string>
 		<string>Shiseido-ExtraLightx.otf</string>
 		<string>Shiseido-Lightx.otf</string>
+		<string>ACaslonPro-Regular.otf</string>
+		<string>BigCaslonFB-Regular.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -74,9 +80,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>SERVER_APP_URL</key>
-	<string>${SERVER_APP_URL}</string>
-	<key>TARGET</key>
-	<string>${TARGET}</string>
 </dict>
 </plist>
