--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -43,7 +43,7 @@
 		<string>ssdcatalog2</string>
 		<string>sfslx2</string>
 		<string>ssdsba</string>
-		<string>yutakaSounds</string>
+		<string>yutakasounds</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
