遷移先URLスキーム変更

--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -40,7 +40,7 @@
 		<string>ssdsoftner</string>
 		<string>ssduvi</string>
 		<string>ssdutm</string>
-		<string>ssdcatalog2</string>
+		<string>ssdcatalog</string>
 		<string>sfslx2</string>
 		<string>ssdsba</string>
 		<string>yutakasounds</string>
