遷移先のURLスキーム調整

--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -44,6 +44,7 @@
 		<string>sfslx2</string>
 		<string>ssdsba</string>
 		<string>yutakasounds</string>
+		<string>ssdfdf</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
