UTM2のURLをinfo.plistに追記

--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -44,7 +44,7 @@
 		<string>ssdutm</string>
 		<string>ssdcatalog</string>
 		<string>sfslx2</string>
-		<string>ssdsba</string>
+		<string>sad.sg.utm2</string>
 		<string>yutakasounds</string>
 		<string>ssdfdf</string>
 		<string>ssdeeapp</string>
