テスト版アプリ名変更

--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>18AWTEST#Share Beauty</string>
+	<string>18AWSMKTEST#Share Beauty</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
