URLスキーム追加ですUTMマスク

--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -39,6 +39,7 @@
 	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>ssdutma</string>
 		<string>ssdsoftner</string>
 		<string>ssduvi</string>
 		<string>ssdutm</string>
