--- a/Share Beauty App/Info.plist
+++ b/Share Beauty App/Info.plist
@@ -8,6 +8,8 @@
 	<string>#Share Beauty</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -26,7 +28,7 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>jp.co.shiseido.ssdsbatest</string>
+			<string>jp.co.shiseido.ssdsba</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>ssdsba</string>
@@ -46,7 +48,7 @@
 		<string>sfslx2</string>
 		<string>sad.sg.utm2</string>
 		<string>yutakasounds</string>
-		<string>ssdfdf</string>
+		<string>ssdutmeye2</string>
 		<string>ssdeeapp</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
